Closed
Bug 190362
Opened 23 years ago
Closed 23 years ago
MFCEmbed installer crashing during setup
Categories
(Core Graveyard :: Installer: MFCEmbed, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4alpha
People
(Reporter: carosendahl, Assigned: ssu0262)
References
Details
(Keywords: regression, topembed+)
Attachments
(1 file, 1 obsolete file)
|
28.60 KB,
patch
|
samir_bugzilla
:
review+
dveditz
:
superreview+
dbaron
:
approval1.3+
|
Details | Diff | Splinter Review |
Setup is crashing trying to install mfcembed. Happens fairly immediately after
pressing the 'install' button.
Updated•23 years ago
|
Comment 1•23 years ago
|
||
*** Bug 191142 has been marked as a duplicate of this bug. ***
Comment on attachment 113547 [details] [diff] [review]
patch v1.0
Changes to extra.c are only to check to null pointers, nothing more.
Most of the fix is in the installer build process itself.
Attachment #113547 -
Flags: superreview?(dveditz)
Attachment #113547 -
Flags: review?(sgehani)
I don't know if this is a 1.3b blocker. But I'll request it just in case. The
main changes were to the mfcembed's installer's build process.
The changes to extra.c were only to check for null pointers.
Chak, once this patch is checked in, mfcembed will probably not start up. I'm
guessing that it's looking for GRE 1.3a's windows regsitry keys, when we're
installing GRE 1.3b now.
I don't know who's the person to fix that.
Status: NEW → ASSIGNED
Comment 6•23 years ago
|
||
MfcEmbed will look at the registry key based on the current Mozilla version.
Please see the usage of MOZILLA_VERSION at:
http://lxr.mozilla.org/seamonkey/source/embedding/tests/mfcembed/winEmbedFileLocProvider.cpp#205
new patch with added changes to runapp.bat. mfcembed installer build script
(makeall.pl) now delivers the updated runapp.bat. Nothing else changed as
compared to the previous patch.
Attachment #113547 -
Attachment is obsolete: true
Attachment #113547 -
Flags: superreview?(dveditz)
Attachment #113547 -
Flags: review?(sgehani)
Attachment #113558 -
Flags: superreview?(dveditz)
Attachment #113558 -
Flags: review?(sgehani)
forgot to mention that the fix to runapp.bat allows mfcembed to startup now.
Runapp.bat updates the search path appropriately, then spawns mfcembed.exe.
talked to chak. he said that mfcembed is not as important as it once was
because mozilla now works with GRE.
This fix can wait till 1.4a. removing request for 1.3b.
twalker, chak said that you don't need to smoke test mfcembed till 1.4a.
Flags: blocking1.3b?
Comment 10•23 years ago
|
||
Eventhough Mozilla uses the GRE it does not use the Gecko embedding APIs like
MfcEmbed does.
So, we still need to get the MfcEmbed installer fixed soon (1.4a) so that Tracy
can test the embedding builds....thanks
| Reporter | ||
Comment 11•23 years ago
|
||
Sean has the patch, and gecko qa really needs this fixed asap to continue buffy,
gre, and gecko api testing.
Need to get this in asap.
Severity: major → blocker
Flags: blocking1.3?
Priority: -- → P1
Updated•23 years ago
|
Flags: blocking1.3? → blocking1.3-
Comment 12•23 years ago
|
||
Comment on attachment 113558 [details] [diff] [review]
patch v1.1
r=sgehani
Attachment #113558 -
Flags: review?(sgehani) → review+
Comment 13•23 years ago
|
||
Comment on attachment 113558 [details] [diff] [review]
patch v1.1
sr=dveditz
Attachment #113558 -
Flags: superreview?(dveditz) → superreview+
| Assignee | ||
Comment 14•23 years ago
|
||
Comment on attachment 113558 [details] [diff] [review]
patch v1.1
This patch mainly fixes up the mfcembed's installer build process (script
files), which has nothing to do with mozilla's build process.
The only part that affects mozilla code is a couple places that checks for null
pointers in the win32 installer code.
Other than that, it's pretty harmless but with a lot of gain for mfcembed.
Attachment #113558 -
Flags: approval1.3?
Attachment #113558 -
Flags: approval1.3? → approval1.3+
| Assignee | ||
Comment 15•23 years ago
|
||
patch checked in. closing bug as fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•