fixing bug 190362 - MFCEmbed installer crashing during setup. r=sgehani, sr=dveditz, a=dbaron