xpinstall/packager/win_mfcembed/runapp.bat
@@ -2,9 +2,18 @@
 REM --------------------------------------------------------
 REM Modify GRE_DIR below to match your GRE install location
 REM --------------------------------------------------------
-set GRE_VERSION=1.3a
-set GRE_DIR=c:\Program Files\mozilla.org\GRE\%GRE_VERSION%
+set GRE_VERSION=1.3b
 
-set PATH=%PATH%;%GRE_DIR%;%GRE_DIR%\components
+if     exist "%ProgramFiles%\nul" set GRE_DIR=%ProgramFiles%\common files\mozilla.org\GRE\%GRE_VERSION%
+if not exist "%ProgramFiles%\nul" set GRE_DIR=c:\Program Files\common files\mozilla.org\GRE\%GRE_VERSION%
+
+if not exist "%GRE_DIR%\nul" echo.
+if not exist "%GRE_DIR%\nul" echo. GRE version %GRE_VERSION% not found at: %GRE_DIR%
+if not exist "%GRE_DIR%\nul" echo.
+if not exist "%GRE_DIR%\nul" goto end
+
+set PATH=%GRE_DIR%;%GRE_DIR%\components;%PATH%
 mfcembed.exe -console
+goto end
 
+:end
